[workspace]
resolver = "2"
members = ["projects/*"]
default-members = [
    "projects/poem-middleware"
]
exclude = [
    "projects/.DS_Store",
]


[profile.release]
lto = true
panic = "abort"

[workspace.dependencies]
sqlx = { version = "0.8.6", default-features = false, features = [] }
poem = { version = "3.1.10", default-features = false, features = ["rustls"] }
poem-openapi = { version = "5.1.14", default-features = false}

[workspace.dependencies.aliyun-sdk]
version = "1.0.0"
branch = "dev"
git = "https://github.com/oovm/aliyun-sdk"
features = []
