[package]
name = "item-list"
version = "0.0.0"
authors = []
description = "The identifier with semantic postfix"
homepage = "https://github.com"
documentation = "https://docs.rs"
repository = "https://docs.rs"
edition = "2021"

[dependencies]
serde = { version = "1.0.219", optional = true }
poem-openapi = { version = "5.1.14", optional = true }
sea-orm = { version = "1.1.12", optional = true }
serde_json = "1.0.140"
sqlx = { workspace = true, optional = true, features = ["postgres"] }



[dev-dependencies]
tracing-subscriber = "0.3"


[features]
default = []

