[package]
name = "poem-aliyun-oss"
publish = false
version = "0.10.0"
authors = ["NoXF <xianyou.cyq@gmail.com>"]
edition = "2021"
readme = "readme.md"
description = "Aliyun OSS SDK"
license = "Apache-2.0"
repository = "https://github.com/NoXF/poem-aliyun-oss"

[dependencies]
reqwest = { version = "0.12.8", features = ["rustls-tls", "socks"], default-features = false }
tracing = "0.1.40"
base64 = "0.13"
chrono = "0.4.20"
quick-xml = { version = "0.28.0", features = ["serialize"] }
bytes = "1.0"
httpdate = "1.0.2"
hmac = "0.12"
sha1 = "0.10"
serde = { version = "1.0.156", features = ["derive"] }
urlencoding = "2.1.3"

[dev-dependencies]
tokio = { version = "1.1", features = ["full"] }

[features]
default = []
