[package]
name = "poem-aliyun-oss"
publish = false
version = "0.10.0"
authors = ["NoXF <xianyou.cyq@gmail.com>"]
edition = "2021"
readme = "readme.md"
description = "Aliyun OSS SDK"
license = "Apache-2.0"
repository = "https://github.com/NoXF/poem-aliyun-oss"

[dependencies]
reqwest = { version = "0.12.9", features = ["rustls-tls", "socks"], default-features = false }
tracing = "0.1.41"
base64 = "0.13"
chrono = "0.4.39"
quick-xml = { version = "0.28.2", features = ["serialize"] }
bytes = "1.9"
httpdate = "1.0.3"
hmac = "0.12"
sha1 = "0.10"
serde = { version = "1.0.216", features = ["derive"] }
urlencoding = "2.1.3"

[dev-dependencies]
tokio = { version = "1.42", features = ["full"] }

[features]
default = []
