[package]
name = "semantic-id"
version = "0.0.0"
authors = []
description = "The identifier with semantic postfix"
homepage = "https://github.com"
documentation = "https://docs.rs"
repository = "https://docs.rs"
edition = "2021"

[dependencies]
serde = { version = "1.0.217", optional = true }
poem-openapi = { version = "5.1.5", optional = true }
rand = "0.9.0"
uuid = { version = "1.13.2", optional = true, features = ["v7"] }
sqlx = { workspace = true, optional = true, features = ["postgres"] }
sea-orm = { version = "1.1.5", optional = true }

[dev-dependencies]
tracing-subscriber = "0.3"


[features]
default = []

